# mosaico

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  index.html  objects.inv  sitemap.xml
mosaico-packs/: pyproject.toml
mosaico-packs/src/mosaicopacks/: cli.py
mosaico-packs/src/mosaicopacks/manipulation/: contracts.py  main.py
mosaico-sdk-py/: CHANGELOG.md  README.md  pyproject.toml
mosaico-sdk-py/doc-md/: queries.md
mosaico-sdk-py/src/mosaicolabs/: __init__.py  logging_config.py
mosaico-sdk-py/src/mosaicolabs/comm/: __init__.py  connection.py  do_action.py  middlewares.py  mosaico_client.py  notifications.py
mosaico-sdk-py/src/mosaicolabs/enum/: __init__.py  api_key_permission.py  flight_action.py  on_error_policy.py  serialization_format.py  session_level_error_policy.py  session_status.py  topic_level_error_policy.py  topic_writer_status.py
mosaico-sdk-py/src/mosaicolabs/examples/: cli.py  config.py  data_inspection.py  query_catalogs.py
mosaico-sdk-py/src/mosaicolabs/handlers/: __init__.py  base_session_writer.py  config.py  helpers.py  sequence_handler.py  sequence_reader.py  sequence_updater.py  sequence_writer.py  topic_handler.py  topic_reader.py  topic_writer.py
mosaico-sdk-py/src/mosaicolabs/helpers/: __init__.py  helpers.py
mosaico-sdk-py/src/mosaicolabs/ml/: __init__.py  data_frame_extractor.py  sync_policy.py  sync_transformer.py
mosaico-sdk-py/src/mosaicolabs/models/: __init__.py  message.py  mixins.py  serializable.py  types.py
mosaico-sdk-py/src/mosaicolabs/packs/: cli.py
mosaico-sdk-py/src/mosaicolabs/platform/: api_key.py  helpers.py  metadata.py  resource_info.py  resource_manifests.py
mosaico-sdk-py/src/mosaicolabs/ros_bridge/: __init__.py  adapter_base.py  helpers.py  injector.py  loader.py  registry.py  ros_bridge.py  ros_message.py
mosaico-sdk-py/src/mosaicolabs/types/: __init__.py  time.py
mosaico-sdk-py/src/packs/manipulation/: __init__.py  configs.py  contracts.py  custom_translator.py  extract_event_image.py  extract_video_frame.py  main.py  runner.py
mosaico-sdk-py/src/testing/: conftest.py  testing.py
mosaico-sdk-py/src/testing/integration/: config.py  conftest.py  helpers.py  test_auth.py  test_endpoints.py  test_error_policy.py  test_failures.py  test_handlers.py  test_list_flights.py  test_query_catalog.py  test_query_issues.py  test_query_mockup.py  test_query_sequence.py  test_query_timerange.py  test_query_topic.py  test_sequence_update.py  test_stream.py  test_stream_timerange.py  test_synch_transformer.py  test_tls_connections.py  test_to_pandas.py
mosaico-sdk-py/src/testing/unit/: test_message_arrow_roundtrip.py
mosaicod/: CHANGELOG.md  Cargo.toml  README.md  env.devel
mosaicod/.cargo/: config.toml
mosaicod/crates/mosaicod-core/: Cargo.toml
mosaicod/crates/mosaicod-core/src/: params.rs  random.rs
mosaicod/crates/mosaicod-db/: Cargo.toml
mosaicod/crates/mosaicod-db/.sqlx/: query-1ac8bad8686c3f3d9ea0bdb99c60a137746047100552e897570f4e048c1b14ed.json  query-20c4c2f19f699756b427ce5ad8a94b567a76a7c5fcd04f4d5d56a1857247fd8d.json  query-3b43bdfebe47b60983a2ddeb5bb496b803706efc7f2b3f15efb082d23d8e8f68.json  query-3b560e67dd48751a7147326f7a6624ad1e84fd907e86c6265a208159d4efa94c.json  query-3f0901113c4393e557867b8d34fc3e26ffbe248dccc328bf2306e1be6add7e60.json  query-450c03d8888daf25fa0db0c3ce1415e271c8b1be369ff05d6111ce5d7c8296a8.json  query-52bf81ef269d8d00e4b3164e2daf9dfb9397551edcd167fec07f5eab7d32f475.json  query-5a077b5b7b4faab14fe702fddd8f4f0b7302beae49dbc58f4b07a1da4e8fbe97.json  query-681b1757a5808a8cfb8bcbd9700126cf237eacccbdec8196f074316b34ca1eca.json  query-7050173fd1a451a82796d74d5582a3d458af6bc9ea35290912e5452d5faf8a1a.json  query-740f3751493b43a30016f72b7a200c71bb273cec7d4ecd092802904422856667.json  query-79cb3de2515b61e47e156aca124736f8b7a1e4d11ce89e3a4bc6dae42ff027ce.json  query-7f341a9ed25c7bc6743a10c23c6c615c4d5d68bc40abb3ab82d615a79e0d881b.json  query-8496d2bc62be3f0b4db3d0f8aebbaf13a51fe52880e54d19677cd6efb22d8e73.json  query-88d2d1c4b87cc9163c85cbff78e00c0d54d820f6f2aa0605a385aa7c96bbd37d.json  query-8ca4b322a531d52780c436a350c8b598a66dbb5c8aadd59e41076ab15f53d033.json  query-8f8cd465db9743b6bcb393f110c0507d2c08a8d3da1a06de5c20a1cdf66ad235.json  query-9798c177bb39ff3f1c923d9c00121bb6e9d0c0ce1bca57280a9239fafc519a96.json  query-9fa960ddada9316ad8f9940bd0c95aae232ce9acbd7403ec27d148974a355bef.json  query-a821bbc94386890c4d65877c05e05a255d7598065ee314052ae39775eb78c9e3.json  query-ab90da49e46d317f5067dadd1a40d27223e33220647409a59fe0b5f398464fe7.json  query-ad5f887fbe05d72dcb2da10965a9d62977af25cb3e8fdb2a3d19afe9f8720599.json  query-c29a4e960e56718f4b8b2d45581e5ce52a6081e08acc3c1c0fe944435c3782e0.json  query-c6144fad98d1d2d94f2a8070689a60903eda4446ea52162081eadb6357d7e8e8.json  query-ce050f0b57e70a28ff7a1a70e04b7112196749878baa6a3d10946b5ea4753691.json  query-e9b4fb924d206f33ced602e36ac07f7b96f73857cf6b964431369df79735eae9.json  query-ef80be190f4afc232091e7e2bd1c17e9525f00ee12fc4d9d6fdba039c38c2f09.json  query-f3a201e4fb3da1c7b6b192ad40d9020dd73c6098a7b7fdf1d60e4d74498120b6.json  query-f6ac667b3d0eca1cc5cc8831f0a76f4917385d0722b3c8cef83615a85064ce20.json  query-fa5a92c2dd0940e898c166feca4b92556e9c1e2ad552f11c40716388a21eba21.json  query-fd5d96e8b2cefa948598a6311afd035fc8db8cd3eb2c3af7672eb8ea9b8c6dc1.json  query-fdecc6f84635b7ab92c4911880e03abf628519df3f5492b21389f8fffd0e39d7.json
mosaicod/crates/mosaicod-db/migrations/: 20251013100007_init.sql  20251017134519_notifications.sql  (+2 more)
mosaicod/crates/mosaicod-ext/: Cargo.toml
mosaicod/crates/mosaicod-facade/: Cargo.toml
mosaicod/crates/mosaicod-marshal/: Cargo.toml
mosaicod/crates/mosaicod-rw/: Cargo.toml
mosaicod/crates/mosaicod-server/: Cargo.toml
mosaicod/crates/mosaicod-store/: Cargo.toml
mosaicod/src/rw/: chunked_writer.rs
mosaicod/src/types/: mod.rs  tokens.rs
mosaicod/tests/: Cargo.toml  README.md
mosaicod/tests/data/: README.md  ca.pem  cert.pem  key.pem
mosaicod/tests/src/: actions.rs  common.rs  lib.rs
mosaicod/tests/tests/: auth.rs  resources.rs  resources_creation.rs  tls.rs
(+447 files in other folders)
