[workspace]
members = ["crates/*", "bin/*", "tests/"]
resolver = "3"

[workspace.package]
version = "0.3.0"
authors = ["Mosaico Team"]
homepage = "https://mosaico.dev"
repository = "https://github.com/mosaico-labs/mosaico"
license = "AGPL-3.0"
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
# Internal crates
mosaicod-core = { path = "crates/mosaicod-core" }
mosaicod-db = { path = "crates/mosaicod-db" }
mosaicod-facade = { path = "crates/mosaicod-facade" }
mosaicod-ext = { path = "crates/mosaicod-ext" }
mosaicod-marshal = { path = "crates/mosaicod-marshal" }
mosaicod-query = { path = "crates/mosaicod-query" }
mosaicod-rw = { path = "crates/mosaicod-rw" }
mosaicod-server = { path = "crates/mosaicod-server" }
mosaicod-store = { path = "crates/mosaicod-store" }

# These dependencies need to be updated together
arrow = { version = "57.3.0", features = ["prettyprint"] }
arrow-cast = "57.2.0"
arrow-flight = "57.2.0"
arrow-schema = "57.2.0"
parquet = "57.3.0"
datafusion = { version = "52.1.0", default-features = false, features = ["compression", "parquet", "sql", "recursive_protection"] }
tonic = { version = "0.14.3", features = ["tls-ring"] }

base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.11.1"
chrono = "0.4.44"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
dotenv = "0.15.0"
futures = "0.3.32"
if-addrs = "0.15.0"
log = "0.4.29"
mimalloc = { version = "0.1", default-features = false }
object_store = { version = "0.12.4", features = ["aws", "fs"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
signal-hook = "0.4.3"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "macros",
    "runtime-tokio",
    "uuid",
    "json",
] }
thiserror = "2.0.18"
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }
url = "2.5.8"
uuid = { version = "1.21.0", features = [ "v4" ] }
crc32fast = "1.5.0"
iso8601 = "0.6.3"
semver = "1.0.27"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }

# Used to implement middlewares in mosaicod-server crate 
tower = "0.5.3"
http = "1.4.0"

[profile.release]
strip = true    # Strip symbols from binary
panic = "abort" # Smaller binary, no unwinding

[profile.optimized]
inherits = "release"
lto = true           # Link-Time Optimization
codegen-units = 1    # Better optimization (slower compile)

[profile.docker]
inherits = "release"
lto = false
