[package]
name = "tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true


[dependencies]
mosaicod-core = { workspace = true }
mosaicod-db = { workspace = true, features = ["testing"] }
mosaicod-store = { workspace = true, features = ["testing"] }
mosaicod-server = { workspace = true }

arrow-flight = { workspace = true }
tonic = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
arrow = { workspace = true }
url = { workspace = true }

[dev-dependencies]
mosaicod-ext = { workspace = true, features = ["testing"] }
mosaicod-marshal = { workspace = true }