[package]
name = "mosaicod-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "mosaicod_core"

[dependencies]
rand = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
crc32fast = { workspace = true }
bytes = { workspace = true }

