[package]
name = "mosaicod-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "mosaicod_db"

[features]
testing = []
postgres = []

[dependencies]
mosaicod-core = { workspace = true }
mosaicod-marshal = { workspace = true }
mosaicod-query = { workspace = true }

thiserror = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }