[package]
name = "mosaicod-rw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
mosaicod-core = { workspace = true }
mosaicod-ext = { workspace = true }

log = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
thiserror = { workspace = true }
datafusion = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
arrow-schema = { workspace = true }
